# GHOST-Sec-Organization-Development-Platform

./: .gitignore  .htaccess  404.html  CNAME  Gemfile  LICENSE  README.md  _config.yml  _headers  _redirects  composer.json  flexbox.html  grid.html  index.html  linux-guide.html  login.html  main.js  netlify.toml  nginx.conf  package.json  register.html  vercel.json  web.config
.github/workflows/: pages.yml
backend/: auth.php  config.php  database.sql
backend/config/: Database.php  Mailer.php
cpp/: CMakeLists.txt  build.sh
cpp/include/: ProcessGame.hpp
cpp/src/: ProcessGame.cpp  main.cpp
cpp_game/: CMakeLists.txt  KernelDefender.cpp  shell.html
css/: auth.css  flexbox-styles.css  game.css  grid-styles.css  styles.css
demos/: demo-styles.css  styles.css
demos/e-learning/: demo.html  demo.js
demos/full-stack/backend/: server.js
demos/full-stack/frontend/: app.js  index.html  styles.css
demos/healthcare/: demo.html  demo.js
demos/inventory/: demo.html  demo.js
game/: levels.json
games/: build.sh  slackware_terminal_game  terminal_game.cpp
js/: auth.js  game.js  kernel-defender.js  levels.json  main.js  navigation.js  os-dev-game.js
